프로필 이미지 + 포스트 게시물 액티비티로 변경 + 클릭 연결2

--- a/app/src/main/res/layout/activity_code__img.xml
+++ b/app/src/main/res/layout/activity_code__img.xml
@@ -1,10 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".S1PostActivity">
+    tools:context=".Code_ImgActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -53,7 +54,6 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
                         android:layout_marginStart="10dp"
                         android:adjustViewBounds="true"
                         android:src="@drawable/coding1" />
@@ -61,11 +61,9 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"
-                        android:layout_marginStart="10dp"
                         android:adjustViewBounds="true"
+                        android:layout_marginStart="10dp"
                         android:src="@drawable/coding2" />
-
                 </LinearLayout>
 
             </HorizontalScrollView>
@@ -99,10 +97,10 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/notosans_kr_bold"
-                    android:text="xxhyun"
+                    android:text="xxhyun_21"
                     android:textAlignment="textStart"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.034"
                     app:layout_constraintStart_toEndOf="@+id/post_profile"
@@ -146,10 +144,8 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="20dp"
-                        android:text="오늘은 회원 가입시에 사용자의 이름, 아이디, 비밀번호를 받아서
-                        데이터베이스에 저장하는 코딩을 했다. \n\n회원 가입 시에 이름이나 아이디가 데이터 베이스에 존재하는 경우에는 회원가입이 불가능하다. 그리고 이름은 2글자 이상, 아이디는 6글자 이상 적어야하는 조건이 있다. 여러 조건들을 만족한 후에 회원가입이 완료된다. 회원가입 후에는 로그인 창으로 이동하며 로그인을 할 때 아이디와 비번을 입력하지 않은 경우 로그인을 할 수 없다.\n\n오늘의 코드 일지 끝"
-
-                    android:textAlignment="textStart"
+                        android:text="오늘은 회원 가입시에 사용자의 이름, 아이디, 비밀번호를 받아서                         데이터베이스에 저장하는 코딩을 했다. \n\n회원 가입 시에 이름이나 아이디가 데이터 베이스에 존재하는 경우에는 회원가입이 불가능하다. 그리고 이름은 2글자 이상, 아이디는 6글자 이상 적어야하는 조건이 있다. 여러 조건들을 만족한 후에 회원가입이 완료된다. 회원가입 후에는 로그인 창으로 이동하며 로그인을 할 때 아이디와 비번을 입력하지 않은 경우 로그인을 할 수 없다.\n\n오늘의 코드 일지 끝"
+                        android:textAlignment="textStart"
                         android:textColor="#000000"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
