--- a/app/src/main/res/layout/fragment_search_post.xml
+++ b/app/src/main/res/layout/fragment_search_post.xml
@@ -123,7 +123,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="0.8"
                                     android:scaleType="centerCrop"
-                                    android:src="@drawable/coding"
+                                    android:src="@drawable/coding1"
                                     app:riv_corner_radius_top_left="10dp"
                                     app:riv_corner_radius_top_right="10dp"
                                     app:riv_mutate_background="true"
@@ -280,7 +280,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="0.8"
                                     android:scaleType="centerCrop"
-                                    android:src="@drawable/coding"
+                                    android:src="@drawable/coding1"
                                     app:riv_corner_radius_top_left="10dp"
                                     app:riv_corner_radius_top_right="10dp"
                                     app:riv_mutate_background="true"
