검색창 수정

--- a/app/src/main/res/layout/custom_recycler_item.xml
+++ b/app/src/main/res/layout/custom_recycler_item.xml
@@ -12,6 +12,6 @@
         android:id="@+id/imageview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
         tools:srcCompat="@tools:sample/avatars" />
 </LinearLayout>
