--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -64,6 +64,7 @@ tools:context=".AddFragment">
             <ListView
                 android:id="@+id/listview"
                 android:layout_width="match_parent"
+                android:layout_marginEnd="20dp"
                 android:layout_height="208dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp" />
@@ -110,7 +111,7 @@ tools:context=".AddFragment">
                 android:paddingTop="10dp"
                 android:gravity="top"
                 android:hint="당신의 포트폴리오에 대해 이야기 해주세요.\n디자인도 다시 수정"
-                android:inputType="textNoSuggestions"
+                android:inputType="textMultiLine"
                 android:background="@drawable/round_grey2"
                 android:textSize="16dp" />
         </LinearLayout>
